terraform/aws/security.tf
resource "aws_security_group" "kubernetes" {

    name        = format("%s-kubernetes-sg", var.project_name)

    vpc_id      = aws_vpc.cluster_vpc.id

    ingress {
        from_port   = "22"
        to_port     = "22"
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = "80"
        to_port     = "80"
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = "443"
        to_port     = "443"
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 0
        to_port = 65535
        protocol = "tcp"
        self = true
        description = "nodes"
    }

    ingress {
        from_port = 0
        to_port = 65535
        protocol = "udp"
        self = true
        description = "nodes"
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge(var.tags, { 
        Name = format("%s-kubernetes-sg", var.project_name)
    })


}
